# ab-testing-experiments

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ab_testing/: __init__.py  cleaning.py  config.py  io.py  plotting.py  reporting.py  stats.py
data/processed/: cookie_cats_clean.csv
notebooks/: 01_fast_food_marketing_ab_test.ipynb  02_cookie_cats_ab_test.ipynb  cookie_cats_ab_test.ipynb  fast_food_marketing_ab_test.ipynb
references/: data_dictionary.md
